[metadata]
# replace with your username:
name = pycatflow
version = 0.0.1
author = herbertmn
author_email = herbert.natta@gmail.com
description =  A visualization tool which allows the representation of temporal developments, based on on categorical data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/herbertmn/PyCatFlow
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6